syntax = "proto3";

import 'AppDbRecord.proto';

message AppDb
{
    repeated AppDbRecord records = 1;
}
